--- a/fajer.html
+++ b/fajer.html
@@ -1,10 +1,14 @@
-<html></html>
-<head></head>
+<html>
+    <head>
 
+    </head>
+    <body>
+        <title> الصفحه الاول </title>
+        <h1>فجر القطان </h1>
+        <h2>هذا موقعي الاول </h2>
+        <p>اخترت مسار البرمجه لان مسار حلو وراح اتعلم منه شي يديد</p>
+        
 
-<body>
-<title>الصفحه الاول</title>
-<h1>فجر القطان</h1>
-<h2> ه>ا موقعي الاول  </h2>
-
-</body>
+        
+    </body>
+</html>
